# Xenobot

./: .gitignore  Cargo.toml  LEGAL_SAFE_SCOPE.md  LICENSE  README.md  TODOWRITE_STATUS.md  Xenobot项目蓝图.txt  前身项目总结.txt
crates/analysis/: Cargo.toml  build.rs
crates/analysis/src/: config.rs  error.rs  features.rs  lib.rs  ml.rs  nlp.rs
crates/analysis/src/parsers/: mod.rs
crates/api/: Cargo.toml  build.rs
crates/api/.sqlx/: query-02c20115e26611e3946306227f60804681c615174bbe68fee21d6f26eb920a83.json  query-0c5653ffc476fdcba1b25405ce4c4809eeb7723022ac7b33983ab5caafbf7e6e.json  query-0dcac21ab2daebd1df0e07541a8f1d66d9827c0acc450703d5f5caaedbf42bc5.json  query-1a200639cc13dd411ab80d8a3ce910b9dec303f3d621dbcad9933c9d15cf7b6d.json  query-1d43959657392b7799ae48944dbd9c19f2dc6fe3287a4aeec1f76403b09fbf96.json  query-27c78f5f38c33b5ab9f92a4247faa5a1cd5e26a673946a2d351f0ccb1b8881f8.json  query-2af0ffbd6cb950869ea7b9a9941a4a7a5f5aa071da3c5d74386f2dd0fe338015.json  query-2ef06c953c08fbfcfe51780c899a4dfe097a2b29175658d6ba8fd9a86a8325c1.json  query-32b3b651f4048a19b1660242256ba3adccfcb3489116f67f3904a9e4013afc69.json  query-35c328858254d0f0f1bfa67274985a83fb0a0f7f58d311839a900e69a842b6b0.json  query-37532e29898448fd0f70a5a23ae16fcdb1078bf81327bb65086739568feb113b.json  query-38eaa58678abd529d7912c060fa490c50ee53efe858c11e9004d940faf21b774.json  query-39235b0ee36ec88158ea6ed7e64ed280c9137788365073b915ee93b6ff05018f.json  query-3a99eb32397f4750e6eac6754ec9c72892a10c2adbfec3a4812ab570d72909b3.json  query-43c4c7a2327c30c45e6baa28d0e346d06bbc87f67b2f1f25233cc8db9c02bacd.json  query-47abd421fd3bfaae11e476e1c91e0bbb265245ed5ad811169c8a0f6fa6a36b92.json  query-48ea4878903e3fb0cd51fdd2706c077494aac419a7ad3515a1ae86ceb5932faa.json  query-4c3946d255ac1afd8f6ee8278f327a8ec80f2bc388378a2c6b94619fee715a45.json  query-4ea6edea3c41630be41792b39d8e292fc454ca182b9ab1f775c2e7a50536c34f.json  query-525ffb06a8d6ea2383d39efde2581d8a1ec267e6b9920adfcc9236730a826655.json  query-52d9432c6c075eb8575c720ab7ac87eff942ad88f63aa6a598d20750241d0a2b.json  query-5db019c26bc2ebf1ce186bc010f9bf842c3f2d8b628f1701af9cc45f985c688d.json  query-5de970afac0fd6f64f7133466a4cd386a7e1c684a3317f7120c6f952e105645d.json  query-6444a03a0ae90b73dff30ab38d0fc2635ec6565077b0b59f05b9f9143da694eb.json  query-65f5c9d7b3525b8d2ddc88ab969009922d672c2c966e56d8b1a0662b2b34d9bf.json  query-6947746bcf754f5c5c5b5261a38970acdca34175d7f1a7bce1b2be4a3b631ec3.json  query-6d1aeb83c85b8333c77fb33ea6c3ca1ad8c291ce77a18285f0f1606989917f3e.json  query-702a63717863badcef0d0195215e05c9d3fa34166da105e841435b603001bb28.json  query-706577a8ada5bae0db6310ce3c3a9030417f313e221b525e9c3f436f62993e97.json  query-76f11bd1770669327be96de22f24c64c86a24a5e5482218d13a1474dc4e5ae49.json  query-77fadec8a1bd9661ade1565cdeb573207f41978afdfd2527772dbf31badeb766.json  query-7ff1060c635c8bcbf1aeedf49ac5f63c98fd02239bcd74ae7deb89d122256998.json  query-80ce270c5b49d4de344b86f46a945d8fc28f07e8b30bd3b73324726f68c65714.json  query-81614993b548b4f5acfa9d0bfe26df06e8d0961b42eeff7cb19ac20fdd4a96b4.json  query-828c8e8cb8fd89635e90d304dbf9e357f514b83ab063ebf094c9f492e1ec104d.json  query-8559d5a800ead31de327e0c7d3fe99819479ef03f342954114ae1c0a0359bb89.json  query-85fabd98030f1e46853258a3a694d6cd11fb8b0db634d19d5ecdce211bddf592.json  query-97cf8a5b2e77814d41cf7c246f0f225cd6dbfd0e35173e52746961a03a2ee915.json  query-9878c42746618e909864f4b4dc5a8c3c169c9cc0c6c657ba8a3dccc1a40439c2.json  query-9d2999c57657afbe72594dff5487473acc1798340e21d92d8280d1018da6033f.json  (+28 more)
crates/api/migrations/: 001_initial.sql  002_add_chatlab_indexes.sql  003_import_performance_indexes.sql  004_import_source_checkpoint.sql  005_query_hotpath_indexes.sql  006_memory_entries.sql
crates/api/src/: agent.rs  ai.rs  cache.rs  chat.rs  config.rs  core.rs  embedding.rs  error.rs  events.rs  lib.rs  llm.rs  media.rs  memory.rs  merge.rs  network.rs  nlp.rs  router.rs  secrets.rs  server.rs  session.rs  webhook_replay.rs
crates/api/src/database/: mod.rs  repository.rs
crates/api/tests/: advanced_analysis_test.rs  agent_frontend_contract_test.rs  agent_tools_test.rs  ai_semantic_test.rs  basic_analysis_test.rs  chat_incremental_test.rs  database_test.rs  llm_test.rs  media_test.rs  sql_lab_test.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: app.rs  commands.rs  error.rs  lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: config.rs  constants.rs  error.rs  lib.rs  monitor.rs  platform_capabilities.rs  platform_sources.rs  sandbox.rs  types.rs  webhook.rs
crates/discord/: Cargo.toml
crates/discord/src/: account.rs  audio.rs  config.rs  lib.rs  media.rs  monitor.rs  service.rs
crates/googlechat/: Cargo.toml
crates/googlechat/src/: account.rs  audio.rs  config.rs  lib.rs  media.rs  monitor.rs  service.rs
crates/gpu/: Cargo.toml  build.rs
crates/gpu/src/: config.rs  error.rs  lib.rs  linalg.rs  metal.rs  mps.rs  nn.rs
crates/kakaotalk/: Cargo.toml
crates/kakaotalk/src/: account.rs  audio.rs  config.rs  lib.rs  media.rs  monitor.rs  service.rs
crates/mcp/: Cargo.toml  build.rs
crates/mcp/src/: client.rs  config.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: app.rs  error.rs  events.rs  lib.rs  ui.rs
crates/viber/: Cargo.toml
crates/viber/src/: account.rs  audio.rs  config.rs  lib.rs  media.rs  monitor.rs  service.rs
crates/web/: Cargo.toml  build.rs
crates/web/frontend/: .npmrc  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vite.config.mts
crates/web/frontend/public/: shim.js  site.webmanifest
crates/web/frontend/src/: App.vue  app-apis.d.ts  auto-imports.d.ts  components.d.ts  env.d.ts  index.html  main.ts  mcp-api.d.ts  (+1 more)
crates/web/src/: assets.rs  error.rs  integration.rs  lib.rs  websocket.rs
crates/wechat/: Cargo.toml  build.rs
crates/wechat/src/: account.rs  audio.rs  config.rs  decrypt.rs  error.rs  lib.rs  media.rs  monitor.rs  service.rs
crates/zoom/: Cargo.toml
crates/zoom/src/: account.rs  audio.rs  config.rs  lib.rs  media.rs  monitor.rs  service.rs
(+290 files in other folders)
