[workspace]
members = [
    "crates/core",
    "crates/wechat",
    "crates/api",
    "crates/mcp",
    "crates/analysis",
    "crates/gpu",
    "crates/cli",
    "crates/tui",
    "crates/web",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros", "ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
tower = "0.5"
metal = "0.26"
candle-core = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
fastrand = "2.3"
num_cpus = "1.16"
dirs = "5.0"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
rquickjs = "0.11.0"
chrono = "0.4"
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
