[package]
name = "xenobot-analysis"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AI-powered analysis and multi-platform chat parsing for Xenobot"
license = "AGPL-3.0-only"
repository = "https://github.com/AuroraMackenzie/Xenobot.git"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
chrono = { version = "0.4.43", features = ["serde"] }
once_cell = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
fastrand = { workspace = true }
num_cpus = { workspace = true }
dirs = { workspace = true }
tokenizers = "0.19"
jieba-rs = "0.1"
async-openai = { version = "0.23", features = ["default"] }

# Internal workspace dependencies
xenobot-core = { path = "../core", version = "0.1.0" }
xenobot-wechat = { path = "../wechat", version = "0.1.0", optional = true }

[features]
default = []
wechat = ["xenobot-wechat"]
