[package]
name = "xenobot-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for Xenobot"
license = "AGPL-3.0-only"
repository = "https://github.com/AuroraMackenzie/Xenobot.git"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
axum = { workspace = true }
log = "0.4"
env_logger = "0.11"

chrono = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
tower = { workspace = true, features = ["util"] }
notify = { workspace = true }
# Internal workspace dependencies
xenobot-core = { path = "../core", version = "0.1.0" }
xenobot-api = { path = "../api", version = "0.1.0", optional = true }
xenobot-wechat = { path = "../wechat", version = "0.1.0", optional = true }
xenobot-analysis = { path = "../analysis", version = "0.1.0", optional = true }

[features]
default = []
api = ["xenobot-api"]
wechat = ["xenobot-wechat"]
analysis = ["xenobot-analysis"]

[build-dependencies]
chrono = { workspace = true }
