[package]
name = "xenobot-discord"
version = "0.1.0"
edition = "2021"
description = "Legal-safe Discord source discovery and authorized export adapter for Xenobot"
license = "AGPL-3.0-only"
repository = "https://github.com/AuroraMackenzie/Xenobot.git"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
xenobot-core = { path = "../core", version = "0.1.0" }
xenobot-analysis = { path = "../analysis", version = "0.1.0" }
notify = "6.1"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
