[package]
name = "xenobot-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Terminal user interface for Xenobot"
license = "AGPL-3.0-only"
repository = "https://github.com/AuroraMackenzie/Xenobot.git"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"

chrono = { workspace = true }
# Internal workspace dependencies
xenobot-core = { path = "../core", version = "0.1.0" }
xenobot-api = { path = "../api", version = "0.1.0", optional = true }
xenobot-wechat = { path = "../wechat", version = "0.1.0", optional = true }

[features]
default = []
api = ["xenobot-api"]
wechat = ["xenobot-wechat"]

[build-dependencies]
chrono = { workspace = true }
