[package]
name = "xenobot-viber"
version = "0.1.0"
edition = "2021"
description = "Legal-safe Viber source discovery and authorized export adapter for Xenobot"
license = "AGPL-3.0-only"
repository = "https://github.com/AuroraMackenzie/Xenobot.git"

[dependencies]
anyhow = { workspace = true }
notify = "6.1"
regex = "1.10"
thiserror = { workspace = true }
xenobot-core = { path = "../core", version = "0.1.0" }
xenobot-analysis = { path = "../analysis", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.10"
